package gazebo.msgs;

/// \ingroup gazebo_msgs
/// \interface Scene Object
/// \brief Objectdata for the ObjectInstantiatorPlugin
/// \verbatim

import "pose.proto";

message SceneObject
{
  required string object  = 1;
  required bool   visible = 2;
  required Pose   pose    = 3;
  optional double time    = 4;
  optional string query   = 5;
  optional string frame   = 6;
}

